--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,10 @@
 @tailwind utilities;
 
 /* Add this to enforce body styles */
-body {
-    @apply bg-gray-100; /* Tailwind utility class */
-    font-family: 'Arial', sans-serif;
+
+@layer base {
+  :root {
+
+    --radius: 0.5rem
+  }
 }
